# json-ode-model

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  main.rs  parser.rs  types.rs
src/checker/: mod.rs
src/formula/: mod.rs
src/generator/: mod.rs
src/model/: evaluable.rs  mod.rs
src/parameters/: mod.rs  order_0.rs  order_1.rs  order_n.rs
tests/: lib.rs
tests/generator/: mod.rs
tests/input_files/: error_model.json  sample_model.json
tests/parameters/: mod.rs  order_1.rs  order_n.rs
