[package]
name = "ode_model"
version = "0.1.0"
authors = ["Samuel Pastva <daemontus@gmail.com>"]

[lib]
name = "ode_model"
path = "src/lib.rs"

[dependencies]
#va_list = { git = "https://github.com/daemontus/va_list-rs.git" }
rustc-serialize = "0.3.19"
iterator_to_hash_map = "0.9.0"
z3 = "0.2.0"
lazy_static = "0.2.1"
json_utils = { git = "https://github.com/daemontus/rust_json_utils.git" }

[replace]
"va_list:0.0.1" = { git = "https://github.com/daemontus/va_list-rs.git" }